--- a/240_TextEditor/TextEditor/MainWindow.xaml
+++ b/240_TextEditor/TextEditor/MainWindow.xaml
@@ -80,7 +80,7 @@
             </MenuItem>
         </Menu>
 
-        <ToolBarTray DockPanel.Dock="Left" Orientation="Vertical">
+        <ToolBarTray DockPanel.Dock="Top">
 
             <ToolBar>
                 <Button x:Name="btnSaveFile" ToolTip="Сохранить файл" Click="saveFile_Click">
@@ -113,19 +113,32 @@
                 </ComboBox>
 
             </ToolBar>
-            
+
         </ToolBarTray>
 
-        <ToolBarTray DockPanel.Dock="Bottom">
-
-            <ToolBar>
-                <Label Content="Поиск:"/>
-                <TextBox Foreground="White" Text="Проверка поиска"  Background="#ccc" Width="300" Height="20"/>
-            </ToolBar>
+        <TabControl>
+            <TabItem Header="Регистарция">
+                <Grid Background="#418080">
+                    <Label x:Name="label" Content="Регистрация в программе" Foreground="#D17F6F" HorizontalAlignment="Center" Margin="0,30,0,0" VerticalAlignment="Top" FontSize="36" FontWeight="Bold" FontFamily="Courier New"/>
+                    <TextBox x:Name="loginField" Foreground="Black" HorizontalAlignment="Center" Background="#8AE6D0" Height="45" Width="300" Margin="0,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" TextAlignment="Center" FontSize="24" FontWeight="Bold" FontFamily="Courier New"/>
+                    <PasswordBox x:Name="passwordField" Foreground="Black" HorizontalAlignment="Center" Background="#8AE6D0" Height="45" Width="300" Margin="0,175,0,0" VerticalAlignment="Top" FontSize="24"/>
+                    <Button x:Name="btnReg" Foreground="White" Background="#437065"  Content="Регистрация" HorizontalAlignment="Center" Margin="0,250,0,0" VerticalAlignment="Top" Height="40" Width="200" FontWeight="Bold" FontFamily="Courier New" FontSize="24" />
+                </Grid>
+            </TabItem>
             
-        </ToolBarTray>
-        
-        <TextBox x:Name="textArea" Width="780" Margin="0,0,0,1" FontSize="14"/>
+            <TabItem Header="Редактор">
+                <DockPanel>
+                    <ToolBarTray DockPanel.Dock="Bottom">
+                        <ToolBar>
+                            <Label Content="Поиск:"/>
+                            <TextBox Foreground="White" Text="Проверка поиска"  Background="#ccc" Width="300" Height="20"/>
+                        </ToolBar>
+                    </ToolBarTray>
+                    <TextBox x:Name="textArea" FontSize="14"/>
+                </DockPanel>
+            </TabItem>
+            
+        </TabControl>
 
     </DockPanel>
 
