--- a/261_Notes/Notes/MainWindow.xaml
+++ b/261_Notes/Notes/MainWindow.xaml
@@ -17,16 +17,59 @@
             </LinearGradientBrush>
         </Grid.Background>
 
-        <TextBox x:Name="textField" Margin="10,10,10,50" FontSize="16" FontWeight="Bold" FontFamily="Comic Sans MS" Foreground="#FFC3BCBC">
-            <TextBox.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FF4D5357" Offset="0.06"/>
-                    <GradientStop Color="#FF7B95A6" Offset="0.594"/>
-                </LinearGradientBrush>
-            </TextBox.Background>
-        </TextBox>
-        <Button x:Name="btnOpen" Height="30" Width="80" Content="OPEN" Margin="10,0,0,10" Background="Gray" FontFamily="Comic Sans MS" FontSize="18" Foreground="#FFF3F0F0" Click="btnOpen_Click" VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
-        <Button x:Name="btnSave" Height="30" Width="80" Content="SAVE" Margin="0,0,10,10" Background="Gray" FontFamily="Comic Sans MS" FontSize="18" Foreground="#FFF3F0F0" Click="btnSave_Click" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
+        <TabControl>
+            <TabItem Header="Switcher">
+                <Grid>
+                    <Grid.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0.622"/>
+                            <GradientStop Color="White" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Grid.Background>
+
+                    <Label Content="Мои крыжики" Foreground="White" HorizontalAlignment="Center" Margin="0,5,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="22"/>
+                    <RadioButton x:Name="btn1"  Content="Первый крыжик" Foreground="White" HorizontalAlignment="Left" Margin="34,52,0,0" VerticalAlignment="Top" GroupName="buttons"/>
+                    <RadioButton x:Name="btn2" Content="Второй крыжик" Foreground="White" HorizontalAlignment="Left" Margin="34,87,0,0" VerticalAlignment="Top" GroupName="buttons"/>
+                    <RadioButton x:Name="btn3" Content="Третий крыжик" Foreground="White" HorizontalAlignment="Left" Margin="34,124,0,0" VerticalAlignment="Top" GroupName="buttons"/>
+
+                </Grid>
+            </TabItem>
+
+            <TabItem Header="Notes">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="6*"/>
+                        <ColumnDefinition Width="161*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0.622"/>
+                            <GradientStop Color="White" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Grid.Background>
+
+                    <TextBox x:Name="textField" Margin="10,10,10,50" FontSize="16" FontWeight="Bold" FontFamily="Comic Sans MS" Foreground="#FFC3BCBC" Grid.ColumnSpan="2">
+                        <TextBox.Background>
+                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                <GradientStop Color="#FF4D5357" Offset="0.06"/>
+                                <GradientStop Color="#FF7B95A6" Offset="0.594"/>
+                            </LinearGradientBrush>
+                        </TextBox.Background>
+                    </TextBox>
+                    <Button x:Name="btnOpen" Height="30" Width="80" Content="OPEN" Margin="10,0,0,10" Background="Gray" FontFamily="Comic Sans MS" FontSize="18" Foreground="#FFF3F0F0" Click="btnOpen_Click" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="2"/>
+                    <Button x:Name="btnSave" Height="30" Width="80" Content="SAVE" Margin="0,0,10,10" Background="Gray" FontFamily="Comic Sans MS" FontSize="18" Foreground="#FFF3F0F0" Click="btnSave_Click" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Column="1"/>
+
+
+                </Grid>
+
+
+
+            </TabItem>
+        </TabControl>
+
+
+
 
     </Grid>
 
